--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
+html {
+  scroll-padding-top: 40px; /* height of your navbar */
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,44 +14,49 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
-}
 
 
 
 .navbar .navbar-brand {
 	color: rgba(255, 255, 255, .85);
 	font-size: 1rem;
-	padding-top: .45rem;
 }   
+
+.navbar-nav .nav-link.active, .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, .55);
+}
 
 .navbar .navbar-brand img { 
 	max-width: 30px;
 }
 
 .bg-info {
-	background: url('https://res.cloudinary.com/panoy05/image/upload/v1462267440/jumbo-bg_cy3rat.jpg');
+	background-image: url('./assets/images/portfolio-bg.jpg');
 	background-size: cover;
   color: #fff !important;
   background-color: #5bc0de !important;
-  padding: 104px 0px 84px 0px;
+  padding-top: 204px;
+  height: 100vh;
 }
 
-.btn,
-.active {
-	transition: .4s;
-}  
-
-#map {
-  width: 100%; 
-  height: 250px;  
-  margin-bottom: 15px;
+.profileImage {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+  display: block;
+  margin: 0px auto 20px auto;
 }
+
 
 .defaultSpacing {
   padding-top: 100px;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
+
+.active-scroll-spy {
+  color: #FFFFFF !important;
+  font-weight: 700;
+}
